update coivd page title

--- a/covid.html
+++ b/covid.html
@@ -40,7 +40,7 @@
             <div id="content" class="hidden">
                 <!-- Page headers -->
                 <div id="title">
-                    <h1>Covid Antibody Assay Visualization</h1>
+                    <h1>Covid-19 Antibody Test Visualization</h1>
                     <h5 class="subhead">Lateral flow assay performance</h5>
                 </div>
                 <div class="vidDiv">
