--- a/covid.html
+++ b/covid.html
@@ -64,9 +64,8 @@
                             The population-level performance of these lateral flow assays is essential when considering tests for back-to-work 
                             screening. However, the actual number of individuals exposed to SARS-CoV-2 in the US is unknown. Therefore, 
                             we designed an interactive visualization to explore how a dynamic population prevalence affects the likelihood 
-                            of someone having antibodies given a positive result. 
+                            of someone having antibodies given a positive result using bayesian probability. 
                         </p>
-                       
                     </div>
                     <div class="col-xs-hidden col-md-2 col-xl-2"></div>
                 </div>
