update meta descriptions

--- a/covid.html
+++ b/covid.html
@@ -4,7 +4,7 @@
 <head>
     <title>Covid LFA Visualization - Yikai Kuo</title>
     <meta charset="utf-8">
-    <meta name="description" content="An interactive exploration of typography through Processing and animation." />
+    <meta name="description" content="Visualizing the performance of Covid-19 lateral flow assays." />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     </meta>
     <meta http-equiv="cache-control" content="no-cache" />
