Add publication link to covid page

--- a/covid.html
+++ b/covid.html
@@ -90,6 +90,10 @@
                         experiment with
                         scenarios of their own using sliders.
                     </p>
+                    <p>
+                        The accompanying publication is available <a id="paperlink" href="https://bmcinfectdis.biomedcentral.com/articles/10.1186/s12879-021-06257-7">here.</a>
+                    </p>
+
 
                     <br>
                     <div class='centerText'>
