--- a/covid.html
+++ b/covid.html
@@ -91,7 +91,8 @@
                         scenarios of their own using sliders.
                     </p>
                     <p>
-                        The accompanying publication is available <a id="paperlink" href="https://bmcinfectdis.biomedcentral.com/articles/10.1186/s12879-021-06257-7">here.</a>
+                        The accompanying publication is available <a id="paperlink"
+                            href="https://bmcinfectdis.biomedcentral.com/articles/10.1186/s12879-021-06257-7">here.</a>
                     </p>
 
 
@@ -152,7 +153,7 @@
             </div>
         </div>
         <footer id="footer" class="fixed-bottom">
-            <div class="footer-copyright text-center">Yikai Kuo © 2022</div>
+            <div class="footer-copyright text-center">Yikai Kuo © 2025</div>
         </footer>
     </div>
 </body>
